--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vuex": "^3.6.2",
-    "vue-router": "^3.1.3" 
+    "vue-router": "^3.1.3",
+    "material-design-icons-iconfont": "^6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
